--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -1,10 +1,58 @@
+% !TEX root = thesis.tex
+
 \chapter*[Acknowledgements]{Acknowledgements}
 
-both supervisors: katharina (support, encouragment) and pavel (patience)
+I would like to thank the two supervisors of this thesis, Katharina Hartmann and Pavel Caha, for their support, help and patience.
 
-special thanks to pete (advice)
+My thanks also go to all principle researchers of the Research Training Group `Nominal Modification':
+Angela Grimm,
+Beata Moskal,
+Caroline Fery,
+Cecilia Poletto,
+Cécile Meier,
+Cornelia Ebert,
+Ede Zimmermann,
+Esther Rinke,
+Frank Kügler,
+Gert Webelhuth,
+Helmut Weiß,
+Jakopo Torregrossa,
+Jost Gippert,
+Katarina Hartmann,
+Manfred Sailer,
+Merle Weicker,
+Peter Smith,
+Petra Schulz and
+Sven Grawunder.
 
-gk, pis and colleagues (zheng, heidi and derya)
+I also thank my colleagues and friends from the RTG:
+Abigail Anne Bimpeh,
+Ahmad Al-Bitar,
+Astrid Goesswein,
+Carolin Reinert,
+Emine Sahingöz,
+Eugenia Greco,
+Lydia Grohe,
+Melanie Hobich,
+Mariam Kamarauli,
+Priscilla Adenuga,
+Ruby Sleeman,
+Sanja Srdanović,
+Sebastian Bredemann,
+Yat Han Lai and
+Yranahan Traoré.
+
+Zheng Shen,
+Heidi Klockmann and
+Derya Nuhbalaoglu
+
+
+
 stays abroad: penn and brno
 conferences
 people invited in frankfurt
+
+special thanks to pete (advice)
+Thank you for your warm welcome when I first arrived in Frankfurt. Continuous support until the day I handed in this dissertation
+
+Jan, encourage to apply, collaborations besides thesis, thinking about me and mentioning me that opens doors
