--- a/deriving-matching.tex
+++ b/deriving-matching.tex
@@ -319,7 +319,7 @@ To determine their exact feature content, I first focus on \tit{mu}. Then, I ext
 \end{table}
 
 The table shows three forms: the \tit{je}-pronoun is the long version of the third person singular pronoun (not the clitic), the \tit{n}-pronoun is the third person singular pronoun used after prepositions \pgcitep{swan2002}{156-157}, and the \tsc{dem} is the demonstrative.
-In all three forms there is a syncretism between the neuter and the masculine in the dative case. They are the  The complete pronouns are syncretic. I set up a system that can derive the syncretism between the two genders. Doing this allows me to establish which features the morpheme \tit{mu} spells out.
+In all three forms there is a syncretism between the neuter and the masculine in the dative case. The complete pronouns are syncretic. I set up a system that can derive the syncretism between the two genders. Doing this allows me to establish which features the morpheme \tit{mu} spells out.
 
 I discussed in Chapter \ref{ch:decomposition} that syncretisms can be derived in Nanosyntax via the Superset Principle. The lexicon contains a lexical entry that is specified for the form that corresponds to most features. To illustrate this, I repeat the lexical entry for the Dutch \tit{jullie} `you' in \ref{ex:dutch-jullie-lexicon-rep}.
 
@@ -716,15 +716,17 @@ In this dissertation I do not discuss the exact feature content that corresponds
     \toprule
                       & underlying  & surface  \\
     \cmidrule{2-3}
-    \tsc{dem}         & t-i-o-mu    &  t-e-mu   \\
-    \tit{nie}-pronoun & n-i-o-mu    &  n-i-e-mu \\
-    \tit{je}-pronoun  & i-o-mu      &  j-e-mu   \\
+    \tsc{dem}         & t-i-o-mu    &  te-mu   \\
+    \tit{nie}-pronoun & n-i-o-mu    &  nie-mu \\
+    \tit{je}-pronoun  & i-o-mu      &  je-mu   \\
     \bottomrule
   \end{tabular}
   \label{tbl:pol-o-everywhere}
 \end{table}
 
-What these elements all have in common is that they are pronouns. Moreover, they can all appear in both animate and inanimate gender. Therefore, I assume that the \tit{o} spells out pronominal features and gender features. I give the lexical entry in \ref{ex:pol-entry-o}.
+Under my analysis, the \tit{o} is present in all these pronouns, although it does not appear on the surface. The \tit{o} combines with other morphemes like the \tit{i} (in all other pronouns), the \tit{t} in demonstratives and the \tit{n} in pronouns that combine with prepositions.
+
+What these elements (i.e. relative pronoun, demonstratives and third singular pronouns) all have in common is that they are pronouns. Moreover, they can all appear in both animate and inanimate gender. Therefore, I assume that the \tit{o} spells out pronominal features and gender features. I give the lexical entry in \ref{ex:pol-entry-o}.
 
 \ex. \label{ex:pol-entry-o}
 \begin{forest} boom
@@ -747,7 +749,7 @@ I start with the operator features \tsc{wh} and \tsc{rel}. The Polish relative p
 Finally, since the relative pronouns do not have a morphological plural, I assume that \tit{k} contains the feature \#.
 Lastly, I assume that \tit{k} also contains the features \tsc{an} and \tsc{cl}. For this I do not have any independent support. \footnote{\label{ftn:inam-pointer}
 I make this assumption to make room for the \tit{i} to be inserted in the inanimate.
-To be able to derive the inanimate relative pronoun, I also assume that there is a pointer in the lexical entry for \tit{k}, as shown in \ref{ex:pol-entry-k-pointer}.
+To be able to derive the inanimate relative pronoun, I also assume that there is a pointer in the lexical entry for \tit{k}, as shown in \ref{ex:pol-entry-k-pointer} (see \citealt{wyngaerd2018} which illustrates the use of pointers).
 
 \ex.\label{ex:pol-entry-k-pointer}
 \begin{forest} boom
@@ -1937,5 +1939,14 @@ When the internal and external case differ, neither the light head nor the relat
 
 In other words, the crucial difference between Modern German and Polish that leads them to be of different language types is that I analyze Modern German extra light heads as monomorphemic (e.g. \tit{n}) and Polish extra light heads as bimorphemic (e.g. \tit{o-go}).
 This raises the question of whether Polish extra light heads could not be monomorphemic too. A possible hypothesis would be that the morpheme \tit{go} is the extra light head and not \tit{o-go}.
-A parallel between the Polish \tit{go} (and \tit{mu}) and the Modern German \tit{n} (and \tit{m}) would be that they both surface as pronouns in their respective languages. However, there is a difference between the Polish \tit{go} and Modern German \tit{n}. The Polish \tit{go} is analyzed as a clitic \cite{swan2002}, whereas the Modern German \tit{n} is analyzed as a weak pronoun (see footnote \ref{sec:mg-weak-pronoun}).
+
+A parallel between the Polish \tit{go} (and \tit{mu}) and the Modern German \tit{n} (and \tit{m}) is that they both surface as pronouns in their respective languages. However, there is a difference between the Polish \tit{go} and Modern German \tit{n}. The Polish \tit{go} is analyzed as a clitic \citep{swan2002}, whereas the Modern German \tit{n} is analyzed as a weak pronoun (see Section \ref{sec:mg-weak-pronoun}).
+According to \citet{cardinaletti1994}, clitics and weak pronouns differ from each other in that clitics cannot follow prepositions whereas weak pronouns can, and weak pronouns cannot follow dative objects whereas clitics can. Polish \tit{go} and \tit{mu} cannot follow prepositions \pgcitep{swan2002}{157}, whereas Modern German \tit{n} and \tit{m} can (see Section \ref{sec:mg-weak-pronoun}).\footnote{
+As I mentioned in Section \ref{sec:mg-weak-pronoun} not all speakers of Modern German allow the \tit{n} and \tit{m} to follow prepositions. This might suggests that these pronouns are clitics in their grammar, just as in Polish. This raises the question of whether these speakers are also as Polish speakers with the respect to headless relatives, in that they only accept matching cases (which is the version of Modern German described in \citealt{groos1981}).
+I do not investigate this question any further in this thesis.
+I also do not work out an analysis for the variety of Modern German in which \tit{n} and \tit{m} are clitics.
+}
+Theoretically, clitics lack certain pronominal features (\tsc{ref} and Σ, see Section \ref{sec:mg-weak-pronoun}), which are indeed not spelled out by the clitic in my analysis of Polish, but by \tit{o}.\footnote{
+In my analysis, Polish clitics also lack gender features.
+}
 I assume that the weak pronoun in Polish is \tit{o-go} (which combines with the \tit{i} I introduced in Section \ref{sec:pol-rel} to become a strong pronoun). A question that remains unanswered is why \tit{o-go} does not surface as a weak pronoun.
