--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -1049,3 +1049,15 @@
   pages = {341--375},
   doi = {10.1515/9783110829068.341}
 }
+
+@incollection{wyngaerd2018,
+  location = {Oxford},
+  title = {The Feature Structure of Pronouns: A Probe Into Multidimensional Paradigms},
+  booktitle = {Exploring Nanosyntax},
+  publisher = {Oxford University Press},
+  author = {Wyngaerd, Guido Vanden},
+  editor = {Baunaz, Lena and De Clercq, Karen and Haegeman, Liliane and Lander, Eric},
+  year = {2018},
+  pages = {277--304},
+  doi = {10.1093/oso/9780190876746.003.0011}
+}
