--- a/deriving-unrestricted.tex
+++ b/deriving-unrestricted.tex
@@ -2705,7 +2705,7 @@ There is no successful deletion possible when the external case is more complex,
 The two different deletions possibly make different predictions with respect to extraposition. In \ref{ex:ohg-syntax-elh} the surface is element is part of the relative clause, but in \ref{ex:ohg-syntax-ext=int-rep} it is not. If Old High German is a language that allows extraposition of CPs but not extraposition of DPs, the prediction is that relative clauses with a deleted relative pronoun can be extraposed, leaving the demonstrative behind. Relative clauses with a deleted extra light head can only be extraposed including the relative pronoun. I did not check this prediction for Old High German.
 }
 
-I am not the only one to place a demonstrative and an extra light head in such a way in a structure that they either c-command or are c-commanded by the relative pronoun. \citet{cinqueforthcoming} suggests the same, but then more generally for relative clauses. He suggests every type of relative clause in every language is underlyingly double-headed. Support for this claim comes from languages that show this morphologically. An example from Kombai is given in \ref{ex:kombai}. The head of the relative clause is \tit{doü} `sago', and it appears inside the relative clause and outside of it, which make them respectively the internal and the external head.
+I am not the only one to place a demonstrative and an extra light head in such a way in a structure that they either c-command or are c-commanded by the relative pronoun. \citet{cinqueforthcoming} suggests the same, but then more generally for relative clauses. He suggests every type of relative clause in every language is underlyingly double-headed. Support for this claim comes from languages that show this morphologically. An example from the Trans-New Guinea language Kombai is given in \ref{ex:kombai}. The head of the relative clause is \tit{doü} `sago', and it appears inside the relative clause and outside of it, which make them respectively the internal and the external head.
 
 \exg. [\tbf{doü} adiyan-o-no] \tbf{doü} deyalukhe\\
  sago give.3\tsc{pl}.\tsc{nonfut}-{tr}-\tsc{conn} sago finished.\tsc{adj}\\
