--- a/thesis.tex
+++ b/thesis.tex
@@ -50,7 +50,7 @@ Boarnsterhim, Niederlande\\
 
 \clearpage
 
-% \include{acknowledgements}
+\include{acknowledgements}
 
 \clearpage
 \tableofcontents
