katharina and pete comments done
BAM

--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -2,7 +2,7 @@
 
 \chapter*[Acknowledgements]{Acknowledgements}
 
-I would like to thank the two supervisors of this thesis, Katharina Hartmann and Pavel Caha, for their support, help and patience.
+I would like to thank the two supervisors of this thesis, Katharina Hartmann and Pavel Caha, for their support, advice and inspiration.
 
 My thanks also go to all principle researchers of the Research Training Group `Nominal Modification':
 Angela Grimm,
@@ -42,11 +42,12 @@ Sebastian Bredemann,
 Yat Han Lai and
 Yranahan Traoré.
 
+
 Zheng Shen,
 Heidi Klockmann and
 Derya Nuhbalaoglu
 
-
+nano-community
 
 stays abroad: penn and brno
 conferences
@@ -55,4 +56,9 @@ people invited in frankfurt
 special thanks to pete (advice)
 Thank you for your warm welcome when I first arrived in Frankfurt. Continuous support until the day I handed in this dissertation
 
-Jan, encourage to apply, collaborations besides thesis, thinking about me and mentioning me that opens doors
+Jan Don, encourage to apply, collaborations besides thesis, thinking about me and mentioning me that opens doors
+
+Friends and family for encouragement and distraction
+
+I thank Frankfurt for giving Jan and me a city to meet in, and
+I thank Jan for taking care of me when writing this book
