--- a/deriving-internalonly.tex
+++ b/deriving-internalonly.tex
@@ -304,7 +304,7 @@ The feature \ac{\#} corresponds to number, which is singular if it is not combin
 For case, I adopt the features of \citet{caha2009}, already introduced in Chapter \ref{ch:decomposition}. The feature \tsc{k}1 and \tsc{k}2 corresponds to the accusative, and the features \tsc{k}1, \tsc{k}2 and \tsc{k}3 correspond to the dative.
 
 Having discussed the number, gender and case features, only the pronominal features remain. Another context in which the final consonants appear (besides their use in relative pronouns and demonstrative pronouns) is as pronouns in colloquial speech.\footnote{
-The singular feminine dative \tit{r} and the plural dative \tit{n} cannot be easily used as pronouns.
+The singular feminine dative \tit{r} and the plural dative \tit{n} cannot be easily used as pronouns. This can be seen as an indication that it is not purely phonological reduction of the pronouns. Interestingly, the singular feminine dative \tit{r} and the plural dative \tit{n} do not appear in \tsc{wh}-pronouns, as Modern German does not have feminine and plural \tsc{wh}-elements. I do not have an explanation for this observation.
 } In \ref{ex:mg-weak}, I give examples of the masculine accusative singular and masculine dative singular.
 
 \ex.\label{ex:mg-weak}
@@ -411,7 +411,7 @@ Note that the \tsc{wh}-pronouns in Table \ref{tbl:mg-paradigm-wh-rels-rep}, unli
 It is not clear to me how the observation about the morphology is connected to the two language types.
 }
 This identifies the \tit{de} and, more importantly for the discussion here, the \tit{we} as a separate morpheme.\footnote{
-It is also possible to analyze \tit{we} as two separate morphemes: \tit{w} and \tit{e}. This further decomposition would not make a difference for the analysis I propose here. What is crucial is that phi and case features correspond to a single morpheme and the other part has its own morpheme or morphemes.
+It is also possible to analyze \tit{we} as two separate morphemes: \tit{w} and \tit{e}. Under that analysis, the vowel expresses the difference between animacy and the \tit{w} the operator part. This further decomposition would not make a difference for the analysis I propose here. What is crucial is that phi and case features correspond to a single morpheme and the other part has its own morpheme or morphemes.
 }\footnote{
 I actually think that \tit{we} also spells out deixis features. I elaborate on this in Section \ref{sec:deixis-rp}.
 }
@@ -526,7 +526,7 @@ Strong pronouns can be coordinated. \tit{n} and \tit{m} cannot be coordinated, a
 Strong pronouns can be focused, whereas \tit{n} and \tit{m} cannot be focused.
 
 Second, the consonants are not clitics because clitics cannot combine with prepositions, but \tit{n} and \tit{m} can, as shown in \ref{ex:wk-pron-prep}.\footnote{
-It seems that these examples are not grammatical for all speakers of Modern German. For these speakers, the pronouns are possibly clitics.
+It seems that these examples are not grammatical for all speakers of Modern German. For these speakers, the pronouns are possibly clitics. I come back to this at the end of Chapter \ref{ch:deriving-matching}.
 }
 
 \ex.\label{ex:wk-pron-prep}
