--- a/deriving-matching.tex
+++ b/deriving-matching.tex
@@ -575,9 +575,9 @@ I put the underlying forms and the surface form of the inanminate relative prono
     \cmidrule{2-3}
     \tsc{nom} & k-i-o       &  c-o      \\
     \tsc{acc} & k-i-o       &  c-o      \\
-    \tsc{gen} & k-i-o-go    &  cz-e-go  \\
-    \tsc{dat} & k-i-o-mu    &  cz-e-mu  \\
-    \tsc{ins} & k-i-i-m     &  cz-y-m   \\
+    \tsc{gen} & k-i-o-go    &  cze-go  \\
+    \tsc{dat} & k-i-o-mu    &  cze-mu  \\
+    \tsc{ins} & k-i-i-m     &  czy-m   \\
     \bottomrule
   \end{tabular}
   \label{tbl:pol-rps-underl-real}
@@ -615,7 +615,7 @@ Consider the paradigm for the singular of \tit{lampa} `light' and the singular o
 The stem and the suffixes are identical in both paradigms, except for in the dative.\footnote{
 There is also the change from /i/ to /y/ in the genitive of \tit{lampa}.
 }
-There, the stem of \tit{córka} does no longer end with a \tit{k}, but with a \tit{c}. Also, part of the suffix, the \tit{i}, has disappeared. Analyzing \tit{córc-e} as \tit{córk-i-e} brings back regularity in the paradigm. Assuming that this change also takes place in the inanimate relative pronoun, the result of this change is \tit{c-im}.
+There, the stem of \tit{córka} does no longer end with a \tit{k}, but with a \tit{c}. Also, part of the suffix, the \tit{i}, has disappeared. Analyzing \tit{córce} as \tit{córk-i-e} brings back regularity in the paradigm. Assuming that this change also takes place in the inanimate relative pronoun, the result of this change is \tit{c-i-m}.
 
 I continue with the combination of \tit{c} and \tit{i} becoming \tit{czy}, as shown in \ref{ex:pol-phon-c+i}.
 
@@ -628,7 +628,7 @@ This change can be independently observed in \ref{ex:pol-waltz}.
 waltz-\tsc{dim} waltz.\tsc{dim}\\
 \flushfill{\pgcitealt{swan2002}{26}}\label{ex:pol-waltz}
 
-The noun \tit{walc} `waltz' combines with the diminutive marker \tit{ik}. The sequence \tit{c-ik} changes to \tit{czyk}. Assuming that this change also takes place in the inanimate relative pronoun, the result of this change is \tit{czym}.
+The noun \tit{walc} `waltz' combines with the diminutive marker \tit{ik}. The sequence \tit{c-ik} changes to \tit{czyk}. Assuming that this change also takes place in the inanimate relative pronoun, the result of this change is \tit{czy-m}.
 
 I repeat the table with the underlying and surface forms in Table \ref{tbl:pol-rps-underl-real-rep}. Compare the nominative and the accusative to the genitive and the dative.
 
@@ -685,7 +685,9 @@ Consider the paradigm for the singular of \tit{biurko} `desk' and the singular o
 
 The stem and the suffixes are identical in both paradigms, except for in the nominative and the accusative.
 There, the suffix is \tit{o} on the stem \tit{biurk}, and the suffix is \tit{e} on the stem \tit{słońc}. Remember that the \tit{c} is not a primary consonant in Polish \pgcitep{swan2002}{23} and that it is possibly derived from a combination of \tit{k} and \tit{i} (see \ref{ex:pol-phon-k+i-rep}).
-Analyzing \tit{słońc-e} as \tit{słońk-i-o} brings back regularity in the paradigm.
+Analyzing \tit{słońc-e} as \tit{słońk-i-o} brings back regularity in the paradigm.\footnote{
+Under this analysis, \tit{słońc-a} and \tit{słońc-u} are underlyingly \tit{słońk-i-a} and \tit{słońk-i-u}. In these two forms, the \tit{i} would need to change the \tit{k} into a \tit{c} but not affect the vowel.
+}
 Assuming that this change also takes place in the inanimate relative pronoun, the result of this change is \tit{c-e-go}/\tit{c-e-mu}.
 
 I continue with the change in which the combination of \tit{c} and \tit{e} become \tit{cze}, as shown in \ref{ex:pol-phon-ce}.
