--- a/deriving-unrestricted.tex
+++ b/deriving-unrestricted.tex
@@ -94,7 +94,7 @@ Consider now the situation in which the internal case wins the case competition.
 
 Consider now the situation in which the external case wins the case competition. Also here the situation is identical to the one in the internal-only type of language. The relative pronoun consists of a phi and case feature portmanteau and an additional morpheme that spells out the feature \tsc{rel}. Compared to the relative pronoun, the light head lacks the morpheme that spells out \tsc{rel}, and it contains at least one more case feature (\tsc{k}\scsub{2} in Figure \ref{tbl:overview-unres-1}). The lexical entries create a syntactic structure such that neither the light head nor the relative pronoun is structurally contained in the other element. Therefore, none of the elements can be deleted, and there is no headless relative construction possible.
 
-However, in Chapter \ref{ch:typology}, I showed that Old High German is a language of the unrestricted type. In this chapter, I show that Old High German has light heads and relative pronouns with the type of internal syntax described in Figure \ref{fig:rel-lh-unres-simple-1}. I give a compact version of the structures in Figure \ref{fig:rel-lh-ohg-1}.
+In this chapter, I show that Old High German has light heads and relative pronouns with the type of internal syntax described in Figure \ref{fig:rel-lh-unres-simple-1}. I give a compact version of the structures in Figure \ref{fig:rel-lh-ohg-1}.
 
 \begin{figure}[htbp]
   \center
@@ -153,6 +153,8 @@ This light head (i.e. phi and case features) in Old High German is spelled out b
 Consider the relative pronoun in Figure \ref{fig:rel-lh-ohg-1}.
 The relative pronoun in Old High German consists of two morphemes: the constituent that forms the light head (i.e. phi and case features) and the \tsc{rel}P, again indicated by the circles. The constituent that forms the light head has the same spellout as in the light head (\tit{ën} or \tit{m}), and the \tsc{rel}P is spelled out as \tit{d}.
 Throughout this chapter, I discuss the exact feature content of the first possible light head and the relative pronoun, I give lexical entries for them, and I show how these lexical entries lead to the internal syntax shown in Figure \ref{fig:rel-lh-ohg-1}.
+
+As shown in Table \ref{tbl:overview-unres-1}, the first possible light head is able to derive a grammatical headless relative in which the internal and external case match or in which the internal case is more complex than the external case. However, it cannot derive a grammatical headless relative in which the external case is more complex than the internal case. This is where the second possible light head comes into play.
 
 The second possible light head differs from the first possible head in that it contains a feature more than the relative pronoun instead of a feature less. I call the additional feature X. The phi and case features are still spelled out by the phi and case portmanteau. The XP that contains the feature X and the feature \tsc{rel} is spelled out by its own lexical entry.
 The relative pronoun is spelled out by that same phi and case portmanteau plus a separate lexical entry that spells out the feature \tsc{rel}.
@@ -243,7 +245,7 @@ These lexical entries lead to the grammaticality pattern shown in Table \ref{tbl
   form & \tsc{rp} & \tsc{lh}\scsub{ext}                 \\
   \tsc{k}\scsub{int} > \tsc{k}\scsub{ext}               &
   \tit{α}, \tit{β}                                      &
-  \tit{α}, \tit{/Z/}                                    &
+  \tit{α}, \tit{ɣ}                                      &
   no & none & *                                         \\
   \tsc{k}\scsub{int} < \tsc{k}\scsub{ext}               &
   \tit{α}, \tit{β}                                      &
@@ -255,18 +257,18 @@ These lexical entries lead to the grammaticality pattern shown in Table \ref{tbl
 \label{tbl:overview-unres-2}
 \end{table}
 
-Consider first the situation in which the internal and the external case match. The light head consists of a phi and case feature portmanteau plus a morpheme that spells out \tsc{rel} and X, which corresponds to phonological form \tit{α}. The relative pronoun consists of the same phi and case feature morpheme and a morpheme that spells out the feature \tsc{rel}, which corresponds to the phonological form \tit{α} too.
+Consider first the situation in which the internal and the external case match. The light head consists of a phi and case feature portmanteau (spelled out as \tit{β}) plus a morpheme that spells out \tsc{rel} and X, which corresponds to phonological form \tit{α}. The relative pronoun consists of the same phi and case feature morpheme (also spelled out as \tit{β}) and a morpheme that spells out the feature \tsc{rel}, which corresponds to the phonological form \tit{α} too.
 The lexical entries create a syntactic structure such that the light head and the relative pronoun are syncretic, so the relative pronoun is formally contained in the light head. Therefore, the relative pronoun can be deleted, and the light head surfaces, bearing the external case.\footnote{
-The same holds the other way around: the light head is also formally contained in the relative pronoun, so the light head can be deleted too. Later in this section I come back to why it is the relative pronoun that is deleted here and not the light head.
+The same holds the other way around: the light head is also formally contained in the relative pronoun, so the light head can be deleted too. In Section \ref{sec:coming-back} I come back to why it is the relative pronoun that is deleted here and not the light head.
 }
 
-Consider now the situation in which the internal case wins the case competition. The light head consists of a phi and case feature portmanteau plus a morpheme that spells out \tsc{rel} and X, which corresponds to phonological form \tit{α}. The relative pronoun consists of a phi and case feature portmanteau that contains at least one more case feature than the light head (\tsc{k}\scsub{2} in Figure \ref{tbl:overview-unres-2}) plus a morpheme that spells out the feature \tsc{rel}, which corresponds to the phonological form \tit{α} too.
+Consider now the situation in which the internal case wins the case competition. The light head consists of a phi and case feature portmanteau (spelled out as \tit{β}) plus a morpheme that spells out \tsc{rel} and X, which corresponds to phonological form \tit{α}. The relative pronoun consists of a phi and case feature portmanteau that contains at least one more case feature than the light head (\tsc{k}\scsub{2} in Figure \ref{tbl:overview-unres-2}), which is spelled out as \tit{ɣ}, plus a morpheme that spells out the feature \tsc{rel}, which corresponds to the phonological form \tit{α} too.
 The lexical entries create a syntactic structure such that neither the light head nor the relative pronoun is structurally or formally contained in the other element. Therefore, none of the elements can be deleted, and there is no headless relative construction possible.
 
-Finally, consider the situation in which the external case wins the case competition. The relative pronoun consists of the same phi and case feature morpheme and a morpheme that spells out the feature \tsc{rel}, which corresponds to the phonological form \tit{α}. Compared to the relative pronoun, the light head has in addition the feature X, which is spelled out as \tit{α}, and it contains at least one more case feature (\tsc{k}\scsub{2} in Figure \ref{tbl:overview-intonly}). The lexical entries create a syntactic structure such that neither the light head nor the relative pronoun is structurally or formally contained in the other element. Therefore, none of the elements can be deleted, and there is no headless relative construction possible.
+Finally, consider the situation in which the external case wins the case competition. The relative pronoun consists of the same phi and case feature morpheme (spelled out as \tit{β}) and a morpheme that spells out the feature \tsc{rel}, which corresponds to the phonological form \tit{α}. Compared to the relative pronoun, the light head has in addition the feature X, which is spelled out as \tit{α}, and it contains at least one more case feature (\tsc{k}\scsub{2} in Figure \ref{tbl:overview-intonly}), which is spelled out as \tit{ɣ}. The lexical entries create a syntactic structure such that neither the light head nor the relative pronoun is structurally or formally contained in the other element. Therefore, none of the elements can be deleted, and there is no headless relative construction possible.
 However, the derivation in which the external case is more complex than the internal one goes through a stage in which the internal and the external case match. Therefore, at that stage, these lexical entries create a syntactic structure such that the light head and the relative pronoun are syncretic, so the relative pronoun is formally contained in the light head. Therefore, the relative pronoun can be deleted, and the light head remains, bearing external case. Then, the remaining case features are merged to the light head, and the light head surfaces, bearing the more complex external case.
 
-In Chapter \ref{ch:typology}, I showed that Old High German is a language of the unrestricted type. In this chapter, I show that Old High German has light heads and relative pronouns with the type of internal syntax described in Figure \ref{fig:rel-lh-unres-simple-2}. I give a compact version of the structures in Figure \ref{fig:rel-lh-ohg-2}.
+In Chapter \ref{ch:typology}, I showed that Old High German is a language of the unrestricted type. In this chapter, I show that Old High German has (in addition to the light head shown in Figure \ref{fig:rel-lh-ohg-1}) light heads and relative pronouns with the type of internal syntax described in Figure \ref{fig:rel-lh-unres-simple-2}. I give a compact version of the structures in Figure \ref{fig:rel-lh-ohg-2}.
 
 \begin{figure}[htbp]
   \center
@@ -1046,7 +1048,7 @@ In sum, Old High German headless relatives can be derived from a light-headed re
 \subsection{The demonstrative}\label{sec:ohg-lh}
 
 As I mentioned in the introduction of this section, headless relatives in Old High German can be derived from two different light-headed relatives: one that does not surface in the language and one that does surface in the language.
-In this section I discuss the second one, the light-headed relative that also surfaces in the language. This light-headed relative is headed by a demonstrative. It cannot be the source of a headless relative in Modern German or Polish, but it can in Old High German. The reason for that is that in Old High German, the demonstrative is syncretic with the relative pronoun.
+In this section I discuss the second one, the light-headed relative that also surfaces in the language. This light-headed relative is headed by a demonstrative. It cannot be the source of a headless relative in Modern German or Polish, but it can in Old High German. The reason for that is that in Old High German, the demonstrative is syncretic with the relative pronoun (that surfaces in headless relatives).
 
 In the introduction of this chapter, I suggested that the internal syntax of the demonstrative is as shown in \ref{ex:ohg-lh-complex-2}.
 
@@ -1128,10 +1130,10 @@ I show the complete structure that I work towards in this section in \ref{ex:ohg
 \end{forest}
 \end{adjustbox}
 
-I give an example of a light-headed relative headed by a demonstrative in \ref{ex:ohg-lh-rel}.
+I give an example of a relative clause headed by a demonstrative in \ref{ex:ohg-lh-rel}.
 The \tit{ther} `\tsc{dem}.\tsc{sg}.\tsc{m}.\tsc{nom}' not marked in bold is the demonstrative that is the head of the relative clause.
 The \tit{Ther} `\tsc{rp}.\tsc{sg}.\tsc{m}.\tsc{nom}' marked in bold is the relative pronoun in the relative clause.\footnote{
-I assume that whether both the light head and the relative pronoun or only one of them surfaces is determined by information structure. In \ref{ex:ohg-lh-rel}, it seems plausible that the one that hit Christ is emphasized, and that therefore no deletion takes place.
+I assume that whether both the demonstrative and the relative pronoun or only one of them surfaces is determined by information structure. In \ref{ex:ohg-lh-rel}, it seems plausible that the one that hit Christ is emphasized, and that therefore no deletion takes place.
 }
 
 \exg. Crist, uuer ist ther \tbf{ther} \tbf{dih} \tbf{slehit}?\\
@@ -1191,7 +1193,9 @@ Logically speaking, the syncretism can be derived by either placing the \tsc{dem
 
 With both lexical entries, the \tit{d} is inserted for the \tsc{rel}P and the \tsc{dem}P (because of the Superset Principle). The feature \tsc{dem} could not be placed below \tsc{wh}, as Old High German uses pronouns starting with \tit{(h)w} for interrogatives. If the feature \tsc{dem} was below \tsc{wh}, it would be the \tit{(h)w} that would be inserted and not the \tit{d} (because of the Elsewhere Condition).
 
-If you also consider the syncretisms in Modern German and in Polish, then only the ordering in \ref{ex:dem-option-high} can derive the patterns. These languages have a syncretism between the interrogative and the relative pronoun to the exclusion of the demonstrative. I give an overview of the syncretism patterns in the different languages I discussed in Table \ref{tbl:syncretisms-dem}.
+If you also consider the syncretisms in Modern German and in Polish, then only the ordering in \ref{ex:dem-option-high} can derive the patterns. These languages have a syncretism between the interrogative and the relative pronoun to the exclusion of the demonstrative. I give an overview of the syncretism patterns in the different languages I discussed in Table \ref{tbl:syncretisms-dem}.\footnote{
+As discussed in Chapter \ref{ch:deriving-onlyinternal}, headed relatives in Modern German take the relative pronoun that starts with a \tit{d}. Table \ref{tbl:syncretisms-dem} shows only the relative pronouns that appear in headless relatives. In footnote \ref{ftn:mg-de-we} I show how the two different relative pronouns can be modeled.
+}
 
 \begin{table}[htbp]
   \center
@@ -1211,7 +1215,7 @@ If you also consider the syncretisms in Modern German and in Polish, then only t
 \end{table}
 
 I give the lexical entries for Modern German and Polish that derive this pattern in \ref{ex:dem-mg-p}.\footnote{\label{ftn:mg-de-we}
-As I also noted in Chapter \ref{ch:deriving-onlyinternal}, Modern German actually has two relative pronouns: one starting with \tit{de} and one starting with \tit{we}. To capture that, I assume that the \tsc{rel}-head should actually consist of two heads, say \tsc{rel}\scsub{1} and \tsc{rel}\scsub{2}.
+As discussed in Chapter \ref{ch:deriving-onlyinternal}, Modern German actually has two relative pronouns: one starting with a \tit{d} and one starting with a \tit{w}. To capture that, I assume that the \tsc{rel}-head should actually consist of two heads, say \tsc{rel}\scsub{1} and \tsc{rel}\scsub{2}.
 Up to \tsc{rel}\scsub{1}, the structure is spelled out as \tit{we} and from \tsc{rel}\scsub{2} on the structure is spelled out as \tit{de}. I give the lexical entries that derive this result in \ref{ex:2rels-mg}.
 
 \ex.\label{ex:2rels-mg}
@@ -2017,7 +2021,8 @@ Consider the syntactic structure in \ref{ex:ohg-syntax-ext-wins} that represents
 \end{forest}
 \end{adjustbox}
 
-The \tsc{dem}P on the left (that spells out as \tit{dhen}) is the light head from Figure \ref{fig:ohg-ext-wins-lh}. The \tsc{rel}P in the middle (that spells out as \tit{dher}) is the relative pronoun from Figure \ref{fig:ohg-ext-wins-lh}. The CP on the right represents the relative clause without the relative pronoun. I do not show its internal structure, as it is not relevant for the discussion.
+The \tsc{dem}P on the left (that spells out as \tit{dhen}) is the demonstrative from Figure \ref{fig:ohg-ext-wins-lh}. The \tsc{rel}P in the middle (that spells out as \tit{dher}) is the relative pronoun from Figure \ref{fig:ohg-ext-wins-lh}. It is situated in the specifier of the CP.
+The CP on the right represents the relative clause without the relative pronoun. I do not show its internal structure, as it is not relevant for the discussion.
 The remainder of the main clause is also not part of this syntactic structure. This is because at this point in the derivation the features that spell out \tit{ih bibringu fona iacobes samin endi fona iuda} `I bring of the seed of Jacob and of Judah' have not been merged yet.
 
 The structure in \ref{ex:ohg-syntax-ext-wins} has come into being by merging features one by one. The last feature that has been merged is \tsc{k}2, which created the \tsc{acc}P within the \tsc{dem}P. Remember from the functional sequence in \ref{ex:fseq-lh-ohg} that case features are the highest features, so they are the last ones to be merged.
@@ -2468,7 +2473,7 @@ Consider also Table \ref{tbl:overview-rel-light-ohg-lh2-rep}, that gives the gra
   form & \tsc{rp} & \tsc{lh}\scsub{ext}                 \\
   \tsc{k}\scsub{int} > \tsc{k}\scsub{ext}               &
   \tit{α}, \tit{β}                                      &
-  \tit{α}, \tit{/Z/}                                    &
+  \tit{α}, \tit{ɣ}                                      &
   no & none & *                                         \\
   \tsc{k}\scsub{int} < \tsc{k}\scsub{ext}               &
   \tit{α}, \tit{β}                                      &
@@ -2531,6 +2536,8 @@ This example can only be derived from a light-headed relative headed by an extra
 `this is the one whom they talk about' \flushfill{Old High German, \ac{otfrid} III 16:50}\label{ex:ohg-nom-acc-rep-elh}
 
 The interpretation is still a definite one. This seems to be the surprising example. In Chapter \ref{ch:deriving-onlyinternal} and \ref{ch:deriving-matching}, I suggested that Modern German and Polish have this extra light head in their light-headed relatives because this allows for a universal interpretation. A possible reason for why Old High German does not show this interpretation is the form of its relative pronoun: different from Modern German and Polish, relative pronouns in Old High German start with the definite \tit{d} and not with a \tit{wh}.
+
+Still, what I predict not to exist is an Old High German headless relative with a more complex external case and a universal interpretation. This headless relative would need to be derived from a light-headed relative headed by a demonstrative. If such an example it attested, it falsifies the analysis put forward in this chapter.
 
 In conclusion, all headless relatives in Old High German have a definite interpretation. This means that there is no independent support coming from the interpretation that motivates the claim that Old High German has two different light-headed relative structures that are the source of the different headless relatives.
 
@@ -2685,6 +2692,10 @@ When c-command is a requirement for deletion, then the relative pronoun should c
 ]
 \end{forest}
 \end{adjustbox}
+
+The \tsc{nom}P on the right (that spells out as \tit{er}) is the extra light head.
+The \tsc{rel}P on the left (that spells out as \tit{dher}) is the relative pronoun. It is situated in the specifier of the CP.
+The CP in the middle represents the relative clause without the relative pronoun. I do not show its internal structure, as it is not relevant for the discussion.
 
 Here the \tsc{rel}P on the left c-commands the \tsc{nom}P on the right, according to \posscitet{kayne1994} definition of c-command.
 The \tsc{rel}P is in the specifier of CP, which is in the specifier of FP, which dominates \tsc{nom}P. The \tsc{rel}P is not contained in the CP or in the FP.
