--- a/the-basic-idea.tex
+++ b/the-basic-idea.tex
@@ -1230,7 +1230,7 @@ The light head (the \tsc{acc}P realized by \tit{s}) is formally contained in the
 I illustrate this by marking the content of the dotted circle for the light head gray.
 As the light head is deleted, the headless relative surfaces with the relative pronoun that bears the internal case.
 
-Note here that a deletion based on formal containment happens at the same point in the derivation as a deletion based on structural containment. Remember that spellout in Nanosyntax takes place after each instance of merge. That means that both the structural and the formal information is available at the same point. If there is structural containment, deletion can take place based on structure, and if there is formal containment, deletion can take place on form.
+Note here that a deletion based on formal containment happens at the same point in the derivation as a deletion based on structural containment. Remember that spellout in Nanosyntax takes place after each instance of merge. That means that both the structural and the formal information is available at the same point. If there is structural containment, deletion can take place based on structure, and if there is formal containment, deletion can take place based on form.
 
 In sum, a more complex case can be deleted when it is syncretic with the less complex case, even though the more complex case contains a case feature more. If that is the case, then a relative pronoun can also be deleted when it is syncretic with the light head, even though the relative pronoun contains at least one feature more. Consider such a situation in \ref{fig:rel-lh-unres-mono}.\footnote{
 Note here that the two cases need to match in this situation as well. This can be achieved by making reference to an intermediate step in the derivation, which I explain later on in this section.
